samples/_failures_safe/1761194207_1a78dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eaff6ddd.c: In function ‘main’:
./samples/SAFE/__tmp_eaff6ddd.c:124:5: error: expected expression at end of input
  124 |     read_matrix(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_eaff6ddd.c:124:5: error: expected declaration or statement at end of input
